--- a/recipes/indian_chole_aloo_tikki.html
+++ b/recipes/indian_chole_aloo_tikki.html
@@ -53,15 +53,15 @@
     <ol>
         <li>Step 1</li>
         <p>Place potatoes into a large pot and cover with salted water; bring to a boil. Reduce heat to medium-low and simmer until tender, about 20 minutes. Drain and peel. </p>
-        <li>Step 2<li>
+        <li>Step 2</li>
         <p>Place cooked potatoes into a bowl and add cornstarch, ginger, cumin, cayenne, cilantro, salt, and pepper. Mash together with a fork. Oil your hands with a little vegetable oil and divide the potato mixture into 4 equal portions. Pat each portion into a potato patty about 1/3-inch thick. </p>
-        <l>iStep 3<li>
+        <l>Step 3</li>
         <p>Heat 1 tablespoon vegetable oil in a skillet over medium heat. Fry potato cakes until golden, about 3 minutes on each side. Remove from heat and keep warm. </p>
-        <li>Step 4<li>
+        <li>Step 4</li>
         <p>Grind peppercorns and cloves with a mortar and pestle. </p>
-        <li>Step 5<li>
+        <li>Step 5</li>
         <p>Heat the remaining 2 tablespoons vegetable oil in a skillet over medium-high heat. Stir in red chile peppers, cumin, bay leaves. Add onion, ginger, and garlic. Cook and stir until onion is golden, about 5 minutes. Add pepper-clove mixture, curry powder, and turmeric. </p>
-        <li>Step 6<li>
+        <li>Step 6</li>
         <p>Mix tomato paste with water. Stir diluted tomato paste and tomato into the skillet. Cook over medium heat until the tomato has softened, about 5 minutes. Stir in chickpeas and simmer over low heat for 10 minutes. </p>
         <li>Step 7</li>
         <p>Spoon chickpea sauce over the potato cakes and sprinkle with cilantro leaves. </p>
