--- a/recipes/indian_chole_aloo_tikki.html
+++ b/recipes/indian_chole_aloo_tikki.html
@@ -55,7 +55,7 @@
         <p>Place potatoes into a large pot and cover with salted water; bring to a boil. Reduce heat to medium-low and simmer until tender, about 20 minutes. Drain and peel. </p>
         <li>Step 2</li>
         <p>Place cooked potatoes into a bowl and add cornstarch, ginger, cumin, cayenne, cilantro, salt, and pepper. Mash together with a fork. Oil your hands with a little vegetable oil and divide the potato mixture into 4 equal portions. Pat each portion into a potato patty about 1/3-inch thick. </p>
-        <l>Step 3</li>
+        <li>Step 3</li>
         <p>Heat 1 tablespoon vegetable oil in a skillet over medium heat. Fry potato cakes until golden, about 3 minutes on each side. Remove from heat and keep warm. </p>
         <li>Step 4</li>
         <p>Grind peppercorns and cloves with a mortar and pestle. </p>
